--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <h1>Welcome To</h1>
     <h1><span>Peter Parker</span> World</h1>
+    <h3>Build Climber and Train Stopper</h3>
+    <p>Hi, I am seeking a full-stack web developer. I'm having expertise with HTML,CSS,JAVASCRIPT,JQUERY,WORDPRESS,BOOTSTRAP I always want to work for my client's satisfaction and I always want to give my 100% to provide satisfactory result to my client
+    </p>
+
+    <img src="./images/my-bg1.png" alt="">
 
 
 
