--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
         </div>
     </section>
 
+    <section class="Dream">
+        <div class="div__div">
+            <img src="./images/my-bg1.png" alt="portfolio-image">
+        </div>
+
+        <div class="my__div">
+            <h1>Dream Big</h1>
+
+            <h2>Become a web developer</h2>
+            <p>Hi, I am seeking a full-stack web developer. I'm having expertise with HTML,CSS,JAVASCRIPT,JQUERY,WORDPRESS,BOOTSTRAP I always want to work for my client's satisfaction and I always want to give my 100% to provide satisfactory result to my
+                client
+            </p>
+            <a class="Hire-button" href="#" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
+
 
 
 
