--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="container flexble-container ">
         <div class="my__div">
             <h1>Welcome To</h1>
-            <h1><span>Peter Parker</span> World</h1>
+            <h1><span class="spancolor">Peter Parker</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>Hi, I am seeking a full-stack web developer. I'm having expertise with HTML,CSS,JAVASCRIPT,JQUERY,WORDPRESS,BOOTSTRAP I always want to work for my client's satisfaction and I always want to give my 100% to provide satisfactory result to my
                 client
@@ -26,7 +26,7 @@
         </div>
     </section>
 
-    <section class="Dream">
+    <section class="Dream flexble-container ">
         <div class="div__div">
             <img src="./images/my-bg1.png" alt="portfolio-image">
         </div>
@@ -43,9 +43,31 @@
 
     </section>
 
+    <section class="experience-area">
+        <h1>Experiences</h1>
 
+        <div class="flexble-container ">
+            <div class="experience-item border1">
+                <h2>Baby Web Developer</h2>
+                <h3 class="spancolor">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
 
+            </div>
 
+            <div class="experience-item border2">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="spancolor">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server
+                    and security. I will give you 100% web solution.</p>
+
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
